--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
     "@types/node": "^10.12.21",
+    "@types/redis": "^2.8.12",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
@@ -24,6 +26,8 @@
     "typescript": "^3.3.1"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "redis": "^2.8.0"
   }
 }
