--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
+    "@types/http-errors": "^1.6.1",
+    "@types/mongoose": "^5.3.26",
     "@types/node": "^10.12.21",
+    "@types/passport": "^1.0.0",
     "@types/redis": "^2.8.12",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.2",
@@ -28,6 +31,15 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "http-errors": "^1.7.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "redis": "^2.8.0"
   }
 }
