--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^10.12.21",
     "@types/passport": "^1.0.0",
     "@types/redis": "^2.8.12",
+    "@types/socket.io": "^2.1.2",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
@@ -40,6 +41,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "socket.io": "^2.2.0"
   }
 }
